Improve ui/ux
